# CodeXpert

./: README.md
client/: .env  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/components/: AnalyticsTab.jsx  AnalyticsTab1.jsx  CreateAssignmentForm.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  NewCourseForm.jsx  Playground.jsx  StudentDashboard.jsx  StudentLogin.jsx  TeacherDashboard.jsx  TeacherLogin.jsx
client/src/constants/: index.js
client/src/layout/: AppLayout.jsx
server/: .gitignore  app.py  models.py  pyproject.toml  test.ipynb
server/blueprints/: analytics_bp.py  assignment_routes.py  auth_bp.py  code_bp.py  course_routes.py  dashboard_bp.py  playground_bp.py
server/blueprints/utils/: analytics_utils.py  auth_utils.py  code_utils.py
server/instance/: app.db
server/migrations/versions/: 304971dfe881_questions_table_updated_for_constraints.py  c290f900b0fa_add_error_table_with_foreign_key_to_.py  fce88d35cb9a_initial_migration.py
