[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-migrate>=4.1.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.1.0",
    "anthropic>=0.49.0",
    "ipykernel>=6.29.5",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.1",
]
